(executables
  (names address_test date_test header_test)
  (libraries mrMime alcotest))

(alias
  (name DEFAULT)
  (deps address_test.exe date_test.exe header_test.exe))

(alias
  (name runtest)
  (action (run %{exe:address_test.exe})))

(alias
  (name runtest)
  (action (run %{exe:date_test.exe})))

(alias
  (name runtest)
  (action (run %{exe:header_test.exe})))
